package model.employe;

public class Employe {
}
