package model.employe;

public class Guichetier {
}
