@startuml
'https://plantuml.com/sequence-diagram

package "Model" {
    ' Définition des classes principales
    class Train {
        - String id
        - String type
        - int capacite
        - boolean enService
        + Train(id: String, type: String, capacite: int)
        + mettreHorsService(): void
        + remettreEnService(): void
        + isEnService() : boolean
        + toString(): String
    }

    class Gare {
        - String nom
        - String adresse
        - ArrayList<Train> trains
        + ajouterTrain(train: Train): void
        + listerTrains(): ArrayList<Train>
        + trouverTrainParId(String id)
    }

    class Passager {
        - String nom
        - String prenom
        - String email
        - ArrayList<Billet> historiqueBillets
        + ajouterBillet(billet: Billet): void
        + annulerBillet(billet: Billet): void
        + toString(): String
        + getPrenom():String
        + getNom() : String
        + getEmail() : String
    }

    class Billet {
        - String id
        - Voyage voyage
        - Passager passager
        - double prix
        - isAnnuler
        + Billet(id: String, voyage: Voyage, passager: Passager, prix: double)
        + toString(): String
        + annuler() : void
        + isAnnuler() : boolean
        + getPrix() : double
        + getPassager() : Passager
        + getVoyage() : Voyage*
        + getId() : String
    }

    class Voyage {
        - Train train
        - Gare gareDepart
        - Gare gareArrivee
        - DateTime horaire
        + Voyage(train: Train, gareDepart: Gare, gareArrivee: Gare, horaire: DateTime)
        + toString(): String
    }

    class Horaire {
        - Train train
        - Gare gare
        - DateTime heureDepart
        - DateTime heureArrivee
        + Horaire(train: Train, gare: Gare, heureDepart: DateTime, heureArrivee: DateTime)
        + toString(): String
    }

    class Employe {
        - String id
        - String nom
        - String poste
        + afficherRole(): void
    }

    class Conducteur extends Employe {
        - String permis
        + afficherRole(): void
    }

    class Guichetier extends Employe {
        + afficherRole(): void
    }

    Gare "1" *-- "*" Train : contient
    Voyage "1" *-- "1" Train : utilise
    Voyage "1" *-- "1" Gare : départ/arrivée
    Billet "1" *-- "1" Voyage : correspond à
    Billet "1" *-- "1" Passager : réservé par
    Conducteur -|> Employe : hérite
    Guichetier -|> Employe : hérite

}

package "View"{
    class MainView{
        MainView()
        Show()
    }

}

package "Controller"{
        class GestionGare {
            + ajouterTrain(train: Train): void
            + ajouterGare(gare: Gare): void
            + afficherTrains(): void
        }

        class GestionReservation {
            + reserverBillet(billet: Billet): void
            + afficherReservations(): void
            + annulerReservation(billet : Billet)
        }

        class GestionEmployes {
            + ajouterEmploye(employe: Employe): void
            + afficherEmployes(): void
            + supprimerEmploye(employe : Employe): void
        }
}
@enduml